[package]
name = "tmrecv-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = { version = "0.11 " }
futures-util = { version = "0.3", features = ["sink"] }
log = { version = "0.4" }
socket2 = "0.6.0"
tokio = { version = "1.40", features = [
    "io-util",
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
], default-features = false }

[profile.release]
panic = 'abort'
